# stave

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
stave-macros/: Cargo.toml  expanded.rs
stave-macros/src/: builder.rs  common.rs  generics.rs  lib.rs  methods.rs  registry.rs
stave-macros/tests/: derive.rs
stave-macros/tests/fail/: builder_required_and_optional.rs  builder_required_and_optional.stderr  builder_tuple_struct.rs  builder_tuple_struct.stderr  builder_unit_struct.rs  builder_unit_struct.stderr  methods_duplicate_sets.stderr  methods_generic_impl.rs  methods_generic_impl.stderr  methods_missing_builder.rs  methods_missing_builder.stderr  methods_non_fn_item.rs  methods_non_fn_item.stderr  methods_required_not_available.rs  methods_required_not_available.stderr  methods_requires_duplicate.rs  methods_requires_duplicate.stderr  methods_requires_optional_field.rs  methods_requires_optional_field.stderr  methods_requires_unknown_field.rs  methods_requires_unknown_field.stderr  methods_sets_by_ref.rs  methods_sets_by_ref.stderr  methods_sets_requires_same_field.rs  methods_sets_requires_same_field.stderr  methods_sets_unknown_field.rs  methods_sets_unknown_field.stderr  methods_trait_impl.rs  methods_trait_impl.stderr  mod.stderr
stave-macros/tests/pass/: builder.rs  methods.rs  methods_duplicate_sets.rs  methods_generics.rs  mod.rs
tests/: shloss_like.rs
