[workspace]
resolver = "3"
members = ["stave-macros", "."]

[workspace.package]
license = "MIT"
repository = "https://github.com/konni332/stave"
edition = "2024"
authors = ["konni332"]
documentation = "https://docs.rs/stave"
description = "A compile-time typestate validation macro for type-safe builders."
keywords = ["builder", "typestate", "proc-macro", "compile-time", "validation"]
categories = ["rust-patterns"]

[package]
name = "stave"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = ["**/*.stderr"]

[dependencies]
stave-macros = "0.1"

[dev-dependencies]
trybuild = "1"
