[package]
name = "stave-macros"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = ["**/*.stderr"]

[lib]
proc-macro = true
name = "stave_macros"
path = "src/lib.rs"

[dependencies]
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
quote = "1"
proc-macro2 = "1"
darling = "0.23"
heck = "0.5"
trybuild = "1"
